--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,17 +1,18 @@
 # Shadow
 shadow = true;
-shadow-radius = 7;
+shadow-radius = 10;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 log-level = "warn";
 # log-file = "/path/to/your/log/file";
-# shadow-opacity = 0.7;
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
+shadow-opacity = 0.8;
+shadow-red = 0.11;
+shadow-green = 0.12;
+shadow-blue = 0.13;
 shadow-exclude = [
 	"name = 'Notification'",
 	"class_g = 'Conky'",
+    "class_g = 'Firefox'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
 	"_GTK_FRAME_EXTENTS@:c"
@@ -28,11 +29,13 @@ inactive-opacity-override = false;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 # blur-background = true;
+blur-background-fixed = true;
 # blur-background-frame = true;
 blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # blur-background-fixed = true;
 blur-background-exclude = [
+    "class_g = 'Firefox'",
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c"
@@ -41,9 +44,9 @@ opacity-rule = [ "80:class_g = 'URxvt'" ];
 
 # Fading
 fading = true;
-# fade-delta = 30;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fade-delta = 8;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
 fade-exclude = [ ];
@@ -76,7 +79,7 @@ use-damage = true;
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
