--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -11,6 +11,7 @@ shadow-green = 0.12;
 shadow-blue = 0.13;
 shadow-exclude = [
 	"name = 'Notification'",
+    "class_g = 'i3-frame'",
 	"class_g = 'Conky'",
     "class_g = 'Firefox'",
 	"class_g ?= 'Notify-osd'",
@@ -35,6 +36,7 @@ blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # blur-background-fixed = true;
 blur-background-exclude = [
+    "class_g = 'i3-frame'",
     "class_g = 'Firefox'",
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
