Some new files added - Added i3blocks scripts - Added new .scripts directory with custom scripts - Modified .bashrc and .zshrc - Some changes to compton.conf

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -226,13 +226,13 @@ exec --no-startup-id nm-applet
 exec --no-startup-id compton --dbus -f
 
 # Autostart redshift and geoclue-2.0
-exec_always --no-startup-id redshift-gtk
+exec --no-startup-id redshift-gtk
 
 # Start gpaste-dawmon
 exec_always --no-startup-id gpaste-client start
 
 # Start the greenclip daemon
-exec_always --no-startup-id greenclip daemon
+exec_always --no-startup-id exec $HOME/.scripts/greenklip-daemon.sh
 
 # Disable focus following mouse behavior
 focus_follows_mouse no
@@ -245,7 +245,7 @@ focus_follows_mouse no
 bindsym $mod+Shift+x exec betterlockscreen --lock blur
 
 # Greenclip
-bindsym $mod+c  exec rofi -show greenclip -theme onedark
+bindsym $mod+c exec rofi -show greenclip -theme onedark
 
 # PulseAudio controls
 # Change volume or toggle mute
