--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,7 +26,7 @@ font_size 11.0
 
 #: Font size (in pts)
 
-# adjust_line_height  0
+# adjust_line_height  1
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -414,43 +414,43 @@ background_opacity         0.9
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-color0 #282828  
+color0 #282c34
 color8 #1d1d1d
 
 #: black
 
-color1 #f43753
-color9 #f43753
+color1 #e06c75
+color9 #e06c75
 
 #: red
 
-color2  #c9d05c
-color10 #c9d05c
+color2  #98c379
+color10 #98c379
 
 #: green
 
-color3  #ffc24b
-color11 #ffc24b
+color3  #e5c07b
+color11 #e5c07b
 
 #: yellow
 
-color4  #b3deef
-color12 #b3deef
+color4  #61afef
+color12 #61afef
 
 #: blue
 
-color5  #d3b987
-color13 #d3b987
+color5  #c678dd
+color13 #c678dd
 
 #: magenta
 
-color6  #73cef4
-color14 #73cef4
+color6  #56b6c2
+color14 #56b6c2
 
 #: cyan
 
-color7  #eeeeee
-color15 #ffffff
+color7  #abb2bf
+color15 #abb2bf
 
 #: white
 
