Added split manipulation keybindings for kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -596,6 +596,13 @@ color15 #abb2bf
 
 #: Keyboard shortcuts {{{
 
+kitty_mod ctrl+shift
+
+#: The value of kitty_mod is used as the modifier for all default
+#: shortcuts, you can change it in your kitty.conf to change the
+#: modifiers for all the default shortcuts.
+
+
 #: For a list of key names, see: GLFW keys
 #: <http://www.glfw.org/docs/latest/group__keys.html>. The name to use
 #: is the part after the GLFW_KEY_ prefix. For a list of modifier
@@ -648,16 +655,21 @@ color15 #abb2bf
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
-
-#: The value of kitty_mod is used as the modifier for all default
-#: shortcuts, you can change it in your kitty.conf to change the
-#: modifiers for all the default shortcuts.
-
 # clear_all_shortcuts no
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
+
+#:-----------------------------------------------------------------------:#
+#: Custom Keybindings                                                    :#
+#:-----------------------------------------------------------------------:#
+
+map ctrl+h neighboring_window left
+map ctrl+l neighboring_window right
+map ctrl+j neighboring_window down
+map ctrl+k neighboring_window up
+
+#: Vim-like split window navigation
 
 #: Clipboard {{{
 
