Changed kitty keybindings

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -664,10 +664,10 @@ kitty_mod ctrl+shift
 #: Custom Keybindings                                                    :#
 #:-----------------------------------------------------------------------:#
 
-map ctrl+h neighboring_window left
-map ctrl+l neighboring_window right
-map ctrl+j neighboring_window down
-map ctrl+k neighboring_window up
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+down neighboring_window down
+map ctrl+up neighboring_window up
 
 #: Vim-like split window navigation
 
