--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -154,7 +154,7 @@ interval=30
 [date]
 label=
 separator=false
-command=date '+ %d %b, %Y'
+command=date '+ %b %d, %Y'
 interval=60
 # color=#000000
 
@@ -168,10 +168,10 @@ interval=5
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-instance=spotify
-interval=5
-signal=12
+# [mediaplayer]
+# instance=spotify
+# interval=5
+# signal=12
 
 # OpenVPN support
 #
