--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,10 @@
 #: characters.
 
 font_family         Fira Code
-bold_font           auto
-italic_font         Script12 BT
-bold_italic_font    Flottflott
+bold_font           Fira Code Bold
+# italic_font         Script12 BT
+italic_font         Victor Mono Medium Italic
+bold_italic_font    Victor Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
