Change italic fonts

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@
 font_family         Fira Code
 bold_font           Fira Code Bold
 # italic_font         Script12 BT
-italic_font         Victor Mono Medium Italic
+italic_font         Victor Mono SemiBold Italic
 bold_italic_font    Victor Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
