--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -87,11 +87,11 @@ signal=10
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-label= 
-instance=wlp2s0
-interval=10
-separator=false
+# [iface]
+# label= 
+# instance=wlp2s0
+# interval=10
+# separator=false
 
 # [wifi]
 # label=
