--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -93,16 +93,16 @@ signal=10
 # interval=10
 # separator=false
 
-# [wifi]
-# label=
-# separator=false
-# instance=wlp2s0
-# interval=10
+[wifi]
+label= 
+separator=false
+instance=wlp2s0
+interval=10
 
-# [essid]
-# separator=false
-# instance=wlp2s0
-# interval=10
+[essid]
+separator=false
+instance=wlp2s0
+interval=10
 
 [bandwidth]
 label= 
