--- a/.config/sway/config
+++ b/.config/sway/config
@@ -164,12 +164,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
+# Start waybar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
 	status_command i3blocks #-c ~/.config/i3blocks/config
-    # i3bar_command i3bar -t 0.1
-    strip_workspace_numbers yes
+    strip_workspace_numbers no
 
 
 	# Position and visibility for i3bar
@@ -188,7 +187,6 @@ bar {
         inactive_workspace #00000000 #364046a6 #999999
         urgent_workspace #00000000 #dc322f #ffffff
         #binding_mode
-
     }
 }
 
