--- a/.config/sway/config
+++ b/.config/sway/config
@@ -5,7 +5,7 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-# i3 config file (v4)
+# sway config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
@@ -35,8 +35,8 @@ bindsym $mod+Return exec kitty #i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -theme onedark
+# start wofi (a program launcher)
+bindsym $mod+d exec wofi
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -233,9 +233,9 @@ output LVDS-1 bg ~/Pictures/keep_on_keeping_on.jpg stretch
 # Autostart redshift and geoclue-2.0
 exec --no-startup-id redshift
 
-# Start the greenclip daemon
-exec wl-paste --watch clipman store
-exec wl-paste -p --watch clipman store --histpath="~/.local/share/clipman-primary.json"
+# Start the clipman daemon
+exec wl-paste -p --watch clipman store --max-items=30 --histpath="~/.local/share/clipman-primary.json" 
+exec wl-paste --watch clipman store --max-items=30
 
 # Disable focus following mouse behavior
 focus_follows_mouse no
@@ -275,8 +275,8 @@ bindsym $mod+Shift+space $UNFLOAT
 bindsym $mod+Shift+x exec swaylock
 
 # Greenclip
-bindsym $mod+c exec clipman pick
-bindsym $mod+p exec clipman pick --histpath="~/.local/share/clipman-primary.json"
+bindsym $mod+c exec clipman pick -t dmenu --max-items=30
+bindsym $mod+p exec clipman pick -t dmenu --max-items=30 --histpath="~/.local/share/clipman-primary.json"
 
 # PulseAudio controls
 # Change volume or toggle mute
