--- a/.config/sway/config
+++ b/.config/sway/config
@@ -322,3 +322,6 @@ input 2:8:AlpsPS/2_ALPS_GlidePoint {
     natural_scroll enabled
     dwt enabled
 }
+
+# Screenshot using grim with PrintScr key
+bindsym Print exec grim -t png ~/Pictures/Screenshots/screenshot_`date +%y-%m-%d_%H:%M:%S.png`
