--- a/.config/i3/config
+++ b/.config/i3/config
@@ -139,24 +139,24 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+# These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
+# Pressing left will shrink the window’s width.
+# Pressing right will grow the window’s width.
+# Pressing up will shrink the window’s height.
+# Pressing down will grow the window’s height.
+    bindsym h resize shrink width 10 px or 10 ppt
         bindsym j resize grow height 10 px or 10 ppt
         bindsym k resize shrink height 10 px or 10 ppt
         bindsym l resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
+# same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
+# back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
@@ -167,28 +167,28 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	status_command i3blocks #-c ~/.config/i3blocks/config
-    i3bar_command i3bar -t 0.1
-    strip_workspace_numbers yes
+    status_command i3blocks #-c ~/.config/i3blocks/config
+        i3bar_command i3bar -t 0.1
+        strip_workspace_numbers yes
 
 
-	# Position and visibility for i3bar
-	position top
-    height 25
-	mode dock
+# Position and visibility for i3bar
+        position top
+        height 25
+        mode dock
 
-	# Fonts and colors
-    font pango: FantasqueSansMono Nerd Font 11
-    colors {
-        background #cab19235
-        separator #330066
-        statusline #fdf6e3
-        focused_workspace #00000000 #222d32a6 #efd4b4
-        active_workspace #00000000 #222d32a6 #efd4b4
-        inactive_workspace #00000000 #364046a6 #999999
-        urgent_workspace #00000000 #dc322f #ffffff
-        #binding_mode
-    }
+# Fonts and colors
+        font pango: FantasqueSansMono Nerd Font 11
+        colors {
+            background #cab19235
+                separator #330066
+                statusline #fdf6e3
+                focused_workspace #00000000 #222d32a6 #efd4b4
+                active_workspace #00000000 #222d32a6 #efd4b4
+                inactive_workspace #00000000 #364046a6 #999999
+                urgent_workspace #00000000 #dc322f #ffffff
+#binding_mode
+        }
 }
 
 
@@ -221,19 +221,19 @@ floating_minimum_size -1 x -1
 
 # Disabling window borders
 # for_window [class="^.*"] border normal 0
- 
+
 ####################################################################################
 # Startup manager                                                                  #
 ####################################################################################
 #
 # Desktop background with feh
-exec --no-startup-id feh --bg-scale /home/superap/Pictures/keep_on_keeping_on.jpg
+exec --no-startup-id feh --bg-scale $HOME/Pictures/keep_on_keeping_on.jpg
 
 # Nm-applet
 exec --no-startup-id nm-applet
 
-# Start Compton
-exec --no-startup-id compton --dbus -f
+# Start picom
+exec_always --no-startup-id picom --dbus -f
 
 # Autostart redshift and geoclue-2.0
 exec --no-startup-id redshift-gtk
@@ -248,18 +248,18 @@ focus_follows_mouse no
 # Colors                                                                           #
 ####################################################################################
 #
-set $bg-color 	         #222d32
-set $inactive-bg-color   #364046
-set $text-color          #cfd4b4
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
+set $bg_color 	         #222d32
+set $inactive_bg_color   #364046
+set $text_color          #cfd4b4
+set $inactive_text_color #676E7D
+set $urgent_bg_color     #E53935
 
 # window colors
 #                       border              background         text                 indicator   child_border
-client.focused          $bg-color           $bg-color          $text-color          #00ff00     $bg-color
-client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00     $bg-color
-client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00     $bg-color
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00     $bg-color
+client.focused          $bg_color           $bg_color          $text_color          #00ff00     $bg_color
+client.unfocused        $inactive_bg_color  $inactive_bg_color $inactive_text_color #00ff00     $bg_color
+client.focused_inactive $inactive_bg_color  $inactive_bg_color $inactive_text_color #00ff00     $bg_color
+client.urgent           $urgent_bg_color    $urgent_bg_color   $text_color          #00ff00     $bg_color
 
 # i3blocks requirements for NUM and CAPS indicators
 # bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
@@ -284,12 +284,12 @@ bindsym $mod+c exec rofi -show greenclip -theme onedark
 # PulseAudio controls
 # Change volume or toggle mute
 #
-# Increase sound volume
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% && pkill -SIGRTMIN+10 i3blocks
-# Decrease sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% && pkill -SIGRTMIN+10 i3blocks
-# Mute sound
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle && pkill -SIGRTMIN+10 i3blocks
+# Use pactl to adjust volume in PulseAudio.
+set $refresh_i3blocks pkill -SIGRTMIN+10 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3blocks
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3blocks
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3blocks
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3blocks
 
 # Sreen brightness controls
 #
@@ -299,13 +299,13 @@ bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
 
 # Screenshot using maim with PrintScr key
-set $screenshot-path ~/Pictures/Screenshots/screenshot_`date +%Y-%m-%d_%H:%M:%S`.png
+set $screenshot_path ~/Pictures/Screenshots/screenshot_`date +%Y-%m-%d_%H:%M:%S`.png
 
-bindsym Print exec maim -m 8 -u -g $(i3-msg -t get_tree | jq -r '.. | (.nodes? // empty)[] | select(.focused) | .rect | "\(.width)x\(.height)+\(.x)+\(.y)"') $screenshot-path
+bindsym Print exec maim -m 8 -u -g $(i3-msg -t get_tree | jq -r '.. | (.nodes? // empty)[] | select(.focused) | .rect | "\(.width)x\(.height)+\(.x)+\(.y)"') $screenshot_path
 
-bindsym --release $mod+Print exec maim -m 8 -u -s $screenshot-path
+bindsym --release $mod+Print exec maim -m 8 -u -s $screenshot_path
 
-bindsym $mod+Shift+Print exec maim -m 8 -u $screenshot-path
+bindsym $mod+Shift+Print exec maim -m 8 -u $screenshot_path
 
 ####################################################################################
 # Config for i3-gaps                                                        #
