--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -64,12 +64,7 @@ color=#0c1b21
 #interval=1
 #signal=10
 
-# [volume-pulseaudio]
-# interval=5
-# signal=10
-
-# Custom volume script
-[i3volume]
+[volume-pulseaudio]
 interval=once
 signal=10
 
