--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,14 @@
 # 24 bit color
-set -g default-terminal "xterm-256color"
-set-option -sa terminal-overrides ",*256col*:Tc"
+set -g default-terminal "tmux-256color"
+
+# Escape time
+set-option -sg escape-time 10
 
 # Enabling mouse based events
 set -g mouse on
+
+# Copying and pasting
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
